<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/relativeLayout1"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent"
	android:paddingLeft="10dip" android:paddingRight="10dip"
	android:paddingBottom="10dip">

	<TextView android:id="@+id/welcome" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:text="@string/welcome" />

	<EditText android:id="@+id/alarmText" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:layout_below="@id/welcome" />

	<TimePicker android:id="@+id/timePicker"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:layout_below="@id/alarmText" android:layout_alignLeft="@id/alarmText" />

	<Button android:id="@+id/set_reminder" android:layout_width="100dp"
		android:text="@string/set_reminder" android:layout_height="wrap_content"
		android:layout_below="@+id/alarmText" android:layout_alignRight="@+id/alarmText" />

	<Button android:id="@+id/preferences" android:layout_width="100dp"
		android:text="@string/preferences" android:layout_height="wrap_content"
		android:layout_below="@+id/set_reminder" android:layout_alignRight="@+id/set_reminder" />

	<Button android:id="@+id/cancel_reminder" android:layout_width="100dp"
		android:text="@string/cancel_reminder" android:layout_height="wrap_content"
		android:layout_below="@+id/preferences" android:layout_alignRight="@+id/preferences" />

</RelativeLayout>
